增加两个组件的例子 add two example on Component

--- a/guides/00.环境搭建.md
+++ b/guides/00.环境搭建.md
@@ -1,4 +1,4 @@
 ## Vue.js环境搭建
 
 #### 1. 基础部分，会直接使用单个的html，引入vuejs，不引入vue-cli等打包工具。
-可以查看项目[00 列表渲染](https://jonham.github.io/Vuejs-StepByStep-Basic/src/preview/00)
+预览：[00 列表渲染](https://jonham.github.io/Vuejs-StepByStep-Basic/src/preview/00)
